--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,2 +1,5 @@
 compensatoryHandler-selector=#\\31 3 > button.btn.btn-primary.btn-xs.job_trigger
 compensate-password=190508
+driver-wait=3
+#  /5 * * * * ? 0 32 19 * * ?
+cron=0 32 19 * * ?
