增加测试页面

--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,11 @@
             <artifactId>commons-text</artifactId>
             <version>${commons-text.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.1</version>
+        </dependency>
         <!--apache commons-io -->
         <dependency>
             <groupId>commons-io</groupId>
