--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,17 @@
 compensatoryHandler-selector=#\\31 3 > button.btn.btn-primary.btn-xs.job_trigger
+#http://192.168.0.87:18080/xxl-job-admin/   http://39.108.151.20:8080/xxl-job-admin/jobinfo?jobGroup=2
+job-url=http://192.168.0.87:18080/xxl-job-admin/
+job-user=admin
+job-psw=123456
+
 compensate-password=190508
-driver-wait=3
+
+driver-wait=5
 #  /5 * * * * ? 0 32 19 * * ?
-cron=0 32 19 * * ?
+cron= 0 32 19 * * ?
+env=dev
+
+#jdbc
+test-jdbc-url=jdbc:mysql://mysql.dafy.com:3306/loan
+test-jdbc-user=root
+test-jdbc-psw=dafy1024
