去掉命令关闭IE

--- a/config.properties
+++ b/config.properties
@@ -9,7 +9,7 @@ compensate-password=190508
 driver-wait=5
 #  /5 * * * * ? 0 32 19 * * ?
 cron= 0 32 19 * * ?
-env=pro
+env=test
 
 #jdbc
 test-jdbc-url=jdbc:mysql://mysql.dafy.com:3306/loan
